[package]
name = "mruby-rust-docopt"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]

[dependencies]
mferuby = { git = "https://github.com/hone/mferuby.git", branch = "wip" }
#mferuby = { path = "../../mferuby/crates/mferuby" }
libc = "0.2.0"
docopt = "0.6"
rustc-serialize = "0.3"
lazy_static = "0.2.1"

[lib]
crate-type = ["staticlib"]
